Fix: `GasStation` icon alignment

--- a/src/modules/dashboard/components/GasStation/GasStation.css
+++ b/src/modules/dashboard/components/GasStation/GasStation.css
@@ -21,6 +21,8 @@
 }
 
 .actionsContainer {
+  display: flex;
+  align-items: flex-start;
   align-self: flex-start;
 }
 
